--- a/index.html
+++ b/index.html
@@ -14,16 +14,53 @@
     <div class="container">
         <header>
             <button class="dark-mode-toggle" aria-label="toggle dark mode"><i class="material-icons moon">
-                        nightlight_round
-                    </i> <i class="material-icons sun">
-                        light_mode
-                    </i>
-                </button>
+                    nightlight_round
+                </i> <i class="material-icons sun">
+                    light_mode
+                </i>
+            </button>
             <h1>Library</h1>
         </header>
         <main>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, animi porro veritatis ipsum at inventore,
-                vitae quidem, accusantium ex obcaecati et ut iusto esse ratione saepe. Non aspernatur rem odio.</p>
+            <form class="book-form" action="" method="get">
+                <div class="form-row">
+                    <div class="form-item">
+                        <label for="book">Book</label>
+                        <input type="text" id="book" name="book">
+                    </div>
+                    <div class="form-item">
+                        <label for="author">Author</label>
+                        <input type="text" id="author" name="author">
+                    </div>
+                    <div class="form-item">
+                        <label for="pages">Pages</label>
+                        <input type="text" id="pages" name="pages">
+                    </div>
+                    <div class="form-item">
+                        <label for="read">Status</label>
+                        <select id="read" name="read">
+                            <option value="read">Read</option>
+                            <option value="not read">Not read</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+            <table class="table-container">
+                <thead class="table-header">
+                    <tr>
+                        <th>Book</th>
+                        <th>Author</th>
+                        <th>Pages</th>
+                        <th>Read</th>
+                    </tr>
+                </thead>
+                <tbody class="table">
+
+                </tbody>
+            </table>
         </main>
         <footer>
             <a href="https://www.theodinproject.com/">the odin project | </a>
